--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,14 @@
+body {
+    background-color: rgb(245, 245, 245);
+    color: #000000;
+    margin: 0px;
+}
 
 h1, #Contact{
     background-color: rgb(66, 66, 66);
-    color:rgb(200, 242, 255)
+    color:#c8f2ff;
+    padding: 0px 20px;
+        
 }
 
 h1, #Presentation {
