--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,8 @@
 body {
     background-color: rgb(245, 245, 245);
-    color: #000000;
+    color: #0c0c0c;
     margin: 0px;
+    font-size: large;
 }
 
 h1, #Contact{
@@ -9,6 +10,7 @@ h1, #Contact{
     color:#c8f2ff;
     padding: 0px 20px;
         
+
 }
 
 h1, #Presentation {
