--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,11 @@ a {
 
 #Menu {
     text-align: center;
+    padding: 10px;
+    background-color: rgb(206, 237, 255);
+    margin-bottom: 0px;
 }
+
 
 li {
 
