--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ h5, #GitList, #Contact {
 
 h1, #Presentation {
   text-align: center;
-  margin-top: 0px;
 }
 
 h5 {
@@ -26,7 +25,7 @@ h5 {
 }
 
 a {
-  color: #9552ff;
+  color: #8888f8;
 }
 
 #Menu {
