--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,9 @@ h5, #GitList, #Contact {
 
 h1, #Presentation {
     text-align: center;
+    margin-top: 0px;
 }
+
 
 h5 {
     text-align: right;
@@ -36,7 +38,7 @@ a {
 }
 
 
-li {
 
+li {
     padding: 10px;
 }
