--- a/style.css
+++ b/style.css
@@ -39,4 +39,30 @@ a {
 li {
   padding: 10px;
 }
+
+.thumbnail:hover {
+  position: relative;
+  width: 350px;
+  height: 350px;
+  display: block;
+  z-index: 999;
+}
+
+.thumbnail:active {
+  margin-left: 1px 1px 0;
+  -webkit-box-shadow: -1px -1px 1px #000;
+          box-shadow: -1px -1px 1px #000;
+  outline: 2px solid red;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#f4f5f5), to(#dfdddd));
+  background-image: linear-gradient(to top, #f4f5f5, #dfdddd);
+}
+
+.link:hover {
+  position: relative;
+  font-size: 150%;
+}
+
+.link:active {
+  color: red;
+}
 /*# sourceMappingURL=style.css.map */
