--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,12 @@ body {
     font-size: large;
 }
 
+#Contact {
+ li {
+    padding: 1px;
+}
+}
+
 h1, #Contact{
     background-color: rgb(66, 66, 66);
     color:#c8f2ff;
@@ -24,24 +30,19 @@ h1, #Presentation {
 
 h5 {
     text-align: right;
+    font-size: medium;
 }
 
 a {
     color: rgb(136, 136, 248);
 }
 
-#Menu {
-    text-align: center;
-    padding: 10px;
-    background-color: rgb(206, 237, 255);
-    margin-bottom: 0px;
-}
-
-
 
 li {
     padding: 10px;
 }
+
+/* Thumbnails and links Settings  */
 
 .thumbnail:hover {
     position:relative;
@@ -66,3 +67,31 @@ li {
 .link:active {
     color: red;
 }
+
+/* Menu Settings  */
+
+#Menu {
+    text-align: center;
+    padding: 10px;
+    background-color: rgb(206, 237, 255);
+    margin-bottom: 0px;
+}
+
+/* The navigation bar */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+  }
+  
+  body {
+    padding-top: 60px;
+  }
+  @media (max-width: 979px) {
+    body {
+      padding-top: 0px;
+    }
+  }
+
