--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@ body {
     color: #0c0c0c;
     margin: 0px;
     font-size: large;
+    font-family:Arial, Helvetica, sans-serif
 }
 
 #Contact {
@@ -20,6 +21,7 @@ h5, #GitList, #Contact {
     padding-left: 20px;
     padding-right: 20px;
     margin: 5px;
+    
 }
 
 h1, #Presentation {
@@ -27,19 +29,29 @@ h1, #Presentation {
     margin-top: 0px;
 }
 
+h1, h2, h3 {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h4 { 
+    font-family: Verdana, Tahoma, sans-serif
+}
 
 h5 {
     text-align: right;
     font-size: medium;
+    font-family: Verdana, Tahoma, sans-serif
 }
 
 a {
     color: rgb(136, 136, 248);
+    font-family:Verdana, Tahoma, sans-serif;
 }
 
 
 li {
     padding: 10px;
+    font-family:Verdana, Tahoma, sans-serif;
 }
 
 /* Thumbnails and links Settings  */
@@ -87,11 +99,6 @@ li {
   }
   
   body {
-    padding-top: 60px;
-  }
-  @media (max-width: 979px) {
-    body {
-      padding-top: 0px;
-    }
+    padding-top: 5%;
   }
 
