--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-  background-color: whitesmoke;
+  background-color: #ececec;
   color: #0c0c0c;
   margin: 0px;
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
+  display: block;
 }
 
 #Contact li {
@@ -41,7 +42,7 @@ h5 {
 }
 
 a {
-  color: #8888f8;
+  color: blue;
   font-family: Verdana, Tahoma, sans-serif;
 }
 
@@ -75,6 +76,24 @@ li {
 
 .link:active {
   color: red;
+}
+
+#Contact {
+  display: block;
+  margin: 0;
+  overflow: hidden;
+  bottom: 0;
+  /* Position the navbar at the top of the page */
+}
+
+#Contact h4 {
+  padding-left: 1;
+  display: block;
+  line-height: 0;
+}
+
+#Contact a {
+  color: #8888f8;
 }
 
 /* Menu Settings  */
