--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,13 @@
 body {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(236, 236, 236);
     color: #0c0c0c;
     margin: 0px;
     font-size: large;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
+    display:block;
 }
+
+
 
 #Contact {
  li {
@@ -23,6 +26,7 @@ h5, #GitList, #Contact {
     margin: 5px;
     
 }
+
 
 h1, #Presentation {
     text-align: center;
@@ -44,7 +48,7 @@ h5 {
 }
 
 a {
-    color: rgb(136, 136, 248);
+    color: rgb(0, 0, 255);
     font-family:Verdana, Tahoma, sans-serif;
 }
 
@@ -78,6 +82,22 @@ li {
 
 .link:active {
     color: red;
+}
+
+#Contact {
+display: block;
+margin: 0;
+overflow: hidden;
+bottom: 0; /* Position the navbar at the top of the page */
+h4{
+    padding-left: 1;
+    display: block;
+    line-height: 0;
+}
+
+a  {
+        color: rgb(136, 136, 248);
+    }
 }
 
 /* Menu Settings  */
