--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(236, 236, 236);
-    color: #0c0c0c;
+    color: #000000;
     margin: 0px;
     font-size: large;
     font-family:Arial, Helvetica, sans-serif;
@@ -50,6 +50,7 @@ h5 {
 a {
     color: rgb(0, 0, 255);
     font-family:Verdana, Tahoma, sans-serif;
+    text-decoration: none;
 }
 
 
