--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #ececec;
-  color: #0c0c0c;
+  color: #000000;
   margin: 0px;
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
@@ -44,6 +44,7 @@ h5 {
 a {
   color: blue;
   font-family: Verdana, Tahoma, sans-serif;
+  text-decoration: none;
 }
 
 li {
