--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
 body {
-  background-color: #ececec;
+  background-image: url("images/walpaper2edited.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
   color: #000000;
   margin: 0px;
   font-size: large;
   font-family: Arial, Helvetica, sans-serif;
   display: block;
+  color: #ffffff;
+}
+
+.MenuBTN {
+  border: #424242;
+  color: #5454f7;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: #aaaaaa;
+}
+
+button {
+  border-radius: 25px;
+  padding: 5px;
 }
 
 #Contact li {
@@ -39,10 +60,11 @@ h5 {
   text-align: right;
   font-size: medium;
   font-family: Verdana, Tahoma, sans-serif;
+  color: white;
 }
 
 a {
-  color: blue;
+  color: #5454f7;
   font-family: Verdana, Tahoma, sans-serif;
   text-decoration: none;
 }
@@ -53,14 +75,6 @@ li {
 }
 
 /* Thumbnails and links Settings  */
-.thumbnail:hover {
-  position: relative;
-  width: 350px;
-  height: 350px;
-  display: block;
-  z-index: 999;
-}
-
 .thumbnail:active {
   margin-left: 1px 1px 0;
   -webkit-box-shadow: -1px -1px 1px #000;
@@ -100,7 +114,7 @@ li {
 /* Menu Settings  */
 #Menu {
   text-align: center;
-  padding: 10px;
+  padding: 5px;
   background-color: #ceedff;
   margin-bottom: 0px;
 }
@@ -119,5 +133,13 @@ li {
 
 body {
   padding-top: 50px;
+}
+
+#Portfolio3d {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 5px;
+  text-align: center;
+  list-style-position: inside;
 }
 /*# sourceMappingURL=style.css.map */
