--- a/style.css
+++ b/style.css
@@ -139,4 +139,12 @@ body {
   text-align: center;
   list-style-position: inside;
 }
+
+#Portfolio3d ul {
+  padding: 10px;
+}
+
+#Portfolio3d li {
+  padding: 10px;
+}
 /*# sourceMappingURL=style.css.map */
