--- a/style.scss
+++ b/style.scss
@@ -146,5 +146,12 @@ a  {
     text-align: center;
     
     list-style-position: inside;
+
+    ul {
+        padding: 10px;
+    }
+    li{
+        padding: 10px;
+    }
   }
 
