--- a/style.scss
+++ b/style.scss
@@ -165,6 +165,11 @@ a  {
     width: 100%;
     padding: 20px;
     text-align: center;
+
+    h1{
+        background: none;
+        color:#c8f2ff;
+    }
   }
   
   #Index{
