--- a/style.scss
+++ b/style.scss
@@ -168,7 +168,6 @@ a  {
     width: 100%;
     padding: 0px;
     text-align: center;
-
   }
 
   #DContent{
@@ -182,7 +181,8 @@ a  {
   }
   
   #Index{
-    margin:0px; background-color: black;
+    margin:0px; 
+    background-color: rgb(0, 0, 0);
   }
   
   header {
@@ -195,5 +195,6 @@ a  {
         left:0;
         width:100%;
         height:100%;
+        background-color: #000;
     }
   /*Index Only ^^^^*/
