--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body {
   color: #ffffff;
 }
 
+#lastProject {
+  position: fixed;
+  bottom: 0;
+  color: #f1f1f1;
+  width: 100%;
+  height: 50%;
+  padding: 0px;
+  text-align: center;
+}
+
 .MenuBTN {
   border: #202020;
   color: #703dfd;
@@ -162,7 +172,7 @@ body {
   text-align: center;
 }
 
-#DContent {
+#indexFooter {
   position: fixed;
   bottom: 0;
   color: #f1f1f1;
