--- a/FoxGenerator/styles.css
+++ b/FoxGenerator/styles.css
@@ -64,3 +64,11 @@ header {
 	justify-content: center;
 	margin-bottom: 2%;
 }
+
+@media only screen and (max-width: 600px) {
+    img {
+			max-width: 400px;
+			max-height: 400px;
+			border-radius: 30px;
+		}
+  }
