--- a/FoxGenerator/styles.css
+++ b/FoxGenerator/styles.css
@@ -67,8 +67,8 @@ header {
 
 @media only screen and (max-width: 600px) {
     img {
-			max-width: 400px;
-			max-height: 400px;
+			max-width: 70vw;
+			max-height: 70vh;
 			border-radius: 30px;
 		}
   }
